fix better on mobile

--- a/public/stylesheets/soldHomesStyle.css
+++ b/public/stylesheets/soldHomesStyle.css
@@ -26,7 +26,7 @@
 .listing-grid {
     margin: 0;
     padding: 1.75% 1%;
-    width: 80%;
+    width: max(425px, 80%);
     background-color: #F2F1EC; 
     box-shadow: 4px 4px 4px #00000040;
     display: grid;
@@ -45,6 +45,7 @@
     background: #fff;
     overflow: hidden;
     height: 450px;
+    width: 400px;
     box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
     transition: transform 0.3s, box-shadow 0.3s;
     display: flex;
