--- a/public/stylesheets/testimonialStyle.css
+++ b/public/stylesheets/testimonialStyle.css
@@ -68,10 +68,10 @@
     font-weight: 400;
     font-size: 19px;
     flex: 0 0 100%;
-    height: 100%;
     padding: 0;
     margin: 0;
     background-color: #f2f1ec;
+    overflow: hidden;
 }
 
 .testimonial-text {
@@ -102,7 +102,6 @@
     margin: 15px 0;
     padding: 0;
     width: 100%;
-    height: 300px;
     display: flex;
     justify-content: center;
     align-items: center;
@@ -110,7 +109,7 @@
 
 .card-holder {
     position: relative;
-    height: 100%;
+    height: fit-content;
     flex-basis: 1200px;
     display: flex;
     flex-wrap: nowrap;
